# qxmpp

./: CMakeLists.txt
src/base/: QXmppConstants.cpp  QXmppConstants.h  QXmppJingleIq.cpp  QXmppLogger.cpp  QXmppMessage.cpp  QXmppMessage.h  QXmppPresence.cpp  QXmppPresence.h  QXmppRtpChannel.cpp  QXmppSasl.cpp  QXmppSasl_p.h  QXmppSocks.cpp  QXmppSocks.h  QXmppStream.cpp  QXmppStream.h  QXmppStun.cpp  QXmppStun.h
src/client/: QXmppCallManager.cpp  QXmppClient.cpp  QXmppClient.h  QXmppConfiguration.cpp  QXmppConfiguration.h  QXmppMessageReceiptManager.cpp  QXmppMessageReceiptManager.h  QXmppMucManager.cpp  QXmppOutgoingClient.cpp  QXmppRosterManager.cpp  QXmppTransferManager.cpp
src/server/: QXmppServer.cpp  QXmppServer.h
tests/qxmppmessage/: tst_qxmppmessage.cpp
